--- a/pom.xml
+++ b/pom.xml
@@ -94,9 +94,9 @@
 			<version>6.2.4.RELEASE</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.firebase</groupId>
-			<artifactId>firebase-admin</artifactId>
-			<version>9.2.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+			<version>3.1.2</version>
 		</dependency>
 	</dependencies>
 
