--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-core</artifactId>
+			<version>1.34.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
