--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
 			<artifactId>cloudinary-core</artifactId>
 			<version>1.34.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.34.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
