--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,12 +13,36 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+
+    - name: Set up MySQL 8.0
+      uses: mirromutth/mysql-action@v1.1
+      with:
+        host port: 3800
+        container port: 3307
+        mysql database: 'ecommerce'
+        mysql root password: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+
+    - name: Set up MongoDB 4.4
+      uses: docker://mongo:4.4
+      with:
+          args: mongod --port 27018 --bind_ip_all --auth --replSet rs0
+      env:
+          MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+          MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
+          MONGO_INITDB_DATABASE: 'ecommerce'
+
+    - name: Create Database
+      run:
+        mysql -h localhost -u root -p${{ secrets.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
+
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
