--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        mongodb-version: [ '4.2', '4.4', '5.0', '6.0' ]
 
     steps:
     - uses: actions/checkout@v3
@@ -29,12 +32,10 @@ jobs:
         mysql database: 'ecommerce'
         mysql root password: ${{ secrets.MYSQL_ROOT_PASSWORD }}
 
-    - name: Set up MongoDB 4.4
-      uses: docker://mongo:4.4
+    - name: Start MongoDB
+      uses: supercharge/mongodb-github-action@1.10.0
       with:
-          args: mongod --port 27018 --bind_ip_all --replSet rs0
-      env:
-          MONGO_INITDB_DATABASE: 'ecommerce'
+        mongodb-version: ${{ matrix.mongodb-version }}
 
     - name: Create Database
       run:
