--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Create Database
       run: |
         sudo systemctl start mysql
-        mysql -h localhost -u root -proot -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
+        mysql -h 127.0.0.1 -u root -proot -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
 
     - name: Build with Maven
       run: mvn --batch-mode --update-snapshots package
