--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Testing
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
@@ -14,31 +14,40 @@ jobs:
         mongodb-version: ['6.0']
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    - name: Set up MySQL 8.0
-      uses: mirromutth/mysql-action@v1.1
-      with:
-        host port: 3800
-        container port: 3307
-        mysql database: 'ecommerce'
-        mysql root password: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+      - name: Set up MySQL 8.0
+        uses: mirromutth/mysql-action@v1.1
+        with:
+          host port: 3800
+          container port: 3307
+          mysql database: 'ecommerce'
+          mysql root password: ${{ secrets.MYSQL_ROOT_PASSWORD }}
 
-    - name: Create Database
-      run: |
-        sudo systemctl start mysql
-        mysql -h 127.0.0.1 -u root -proot -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
+      - name: Wait for MySQL to start
+        run: |
+          sleep 10
+          # Add any necessary additional checks here
 
-    - name: Build with Maven
-      run: mvn --batch-mode --update-snapshots package
+      - name: Create Database
+        run: |
+          mysql -h 127.0.0.1 -P 3307 -u root -p"${{ secrets.MYSQL_ROOT_PASSWORD }}" -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      - name: Debug MySQL Connection
+        run: |
+          mysql -h 127.0.0.1 -P 3307 -u root -p"${{ secrets.MYSQL_ROOT_PASSWORD }}" -e "SELECT 1;"
+
+      - name: Build with Maven
+        run: mvn --batch-mode --update-snapshots package
+
+      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
