--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,11 @@ jobs:
 
       - name: Create Database
         run: |
-          mysql -h 127.0.0.1 -P 3307 -u root -p"${{ secrets.MYSQL_ROOT_PASSWORD }}" -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
+          mysql -h 127.0.0.1 -u root -p"${{ secrets.MYSQL_ROOT_PASSWORD }}" -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
 
       - name: Debug MySQL Connection
         run: |
-          mysql -h 127.0.0.1 -P 3307 -u root -p"${{ secrets.MYSQL_ROOT_PASSWORD }}" -e "SELECT 1;"
+          mysql -h 127.0.0.1 -u root -p"${{ secrets.MYSQL_ROOT_PASSWORD }}" -e "SELECT 1;"
 
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots package
