--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           host port: 3800
           container port: 3307
           mysql database: 'ecommerce'
-          mysql root password: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+          mysql root password: root
 
       - name: Wait for MySQL to start
         run: |
@@ -38,7 +38,7 @@ jobs:
 
       - name: Create Database
         run: |
-          mysql -h 127.0.0.1 -u root -p"${{ secrets.MYSQL_ROOT_PASSWORD }}" -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
+          mysql -h 127.0.0.1 -u root -proot -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
 
       - name: Debug MySQL Connection
         run: |
