--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Create Database
         run: |
+          sudo systemctl start mysql
           mysql -h 127.0.0.1 -u root -proot -e "CREATE DATABASE IF NOT EXISTS ecommerce;"
 
       - name: Debug MySQL Connection
