--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B -Dspring.datasource.url="jdbc:mysql://localhost:3306/ecommerce"
+        run: mvn -B -Dspring.datasource.url="jdbc:mysql://localhost:3306/ecommerce" clean package
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
