--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,21 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+      mongodb:
+        image: mongo:${{ matrix.mongodb-version }}
+        ports:
+          - 27017:27017
+        options: --health-cmd="mongo --version" --health-interval=10s --health-timeout=5s --health-retries=3
+      rabbitmq:
+        image: rabbitmq:3.8
+        ports:
+          - 5672:5672
+        options: --health-cmd="rabbitmqctl node_health_check" --health-interval=10s --health-timeout=5s --health-retries=3
+      redis:
+        image: redis:6.2
+        ports:
+          - 6379:6379
+        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
       - uses: actions/checkout@v3
@@ -34,7 +49,7 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B -Dspring.datasource.url="jdbc:mysql://localhost:3306/ecommerce" clean package
+        run: mvn -B -Dapplication.properties=src/main/resources/application.yml clean package
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
       - name: Update dependency graph
