--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,11 +22,6 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-      mongodb:
-        image: mongo:${{ matrix.mongodb-version }}
-        ports:
-          - 27017:27017
-        options: --health-cmd="mongo --version" --health-interval=10s --health-timeout=5s --health-retries=3
       rabbitmq:
         image: rabbitmq:3.8
         ports:
@@ -41,6 +36,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.10.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
+          mongodb-replica-set: test-rs
+          mongodb-port: 42069
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -52,6 +54,7 @@ jobs:
         run: mvn -B -Dapplication.properties=src/main/resources/application.yml clean package
 
       # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      - name: Build with Maven
+        run: mvn -B -Dspring.config.location=src/main/resources/application.yml clean package
+
 
