--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,12 +36,67 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Start MySQL
+        run: |
+          docker run -d --name mysql -p 3306:3306 -e MYSQL_ROOT_PASSWORD=admin -e MYSQL_DATABASE=ecommerce mysql:8.0
+
+      - name: Wait for MySQL
+        run: |
+          # Wait for MySQL to be available
+          while ! curl -s http://localhost:3306; do
+              sleep 5
+          done
+
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.10.0
         with:
           mongodb-version: ${{ matrix.mongodb-version }}
           mongodb-replica-set: test-rs
           mongodb-port: 27017
+
+      - name: Wait for MongoDB
+        run: |
+          # Wait for MongoDB to be available
+          while ! curl -s http://localhost:27017; do
+              sleep 5
+          done
+
+      - name: Start RabbitMQ
+        run: |
+          docker run -d --name rabbitmq -p 5672:5672 -p 15672:15672 rabbitmq:3-management
+
+      - name: Wait for RabbitMQ
+        run: |
+          # Wait for RabbitMQ Management API to be available
+          while ! curl -s http://localhost:15672/api/overview; do
+              sleep 5
+          done
+
+      - name: Start Redis
+        run: |
+          docker run -d --name redis -p 6379:6379 redis:6.2
+
+      - name: Wait for Redis
+        run: |
+          # Wait for Redis to be available
+          while ! curl -s http://localhost:6379; do
+              sleep 5
+          done
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -51,10 +106,31 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B -Dapplication.properties=src/main/resources/application.yml clean package
-
-      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-      - name: Build with Maven
         run: mvn -B -Dspring.config.location=src/main/resources/application.yml clean package
 
+      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
 
+      - name: Run tests with Maven
+        run: mvn -B -Dspring.config.location=src/main/resources/application.yml test
+
+      - name: Stop MySQL
+        run: |
+          docker stop mysql
+          docker rm mysql
+
+      - name: Stop MongoDB
+        run: |
+          docker stop mongodb
+          docker rm mongodb
+
+      - name: Stop RabbitMQ
+        run: |
+          docker stop rabbitmq
+          docker rm rabbitmq
+
+      - name: Stop Redis
+        run: |
+          docker stop redis
+          docker rm redis
