--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     strategy:
       matrix:
         mongodb-version: ['6.0']
+    env:
+      RABBITMQ_PORT: 5673
 
     services:
       mysql:
