--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,11 +22,11 @@ spring:
     cors: allowed-origins=http://localhost:3000
 
   rabbitmq:
-    host: localhost
-    port: 5673
-    username: guest
-    password: guest
-    virtual-host: /
+    host: ${RABBITMQ_HOST:localhost}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${RABBITMQ_USERNAME:guest}
+    password: ${RABBITMQ_PASSWORD:guest}
+    virtual-host: ${RABBITMQ_VIRTUAL_HOST:/}
 
 security:
   jwt:
