--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,6 @@ jobs:
     strategy:
       matrix:
         mongodb-version: ['6.0']
-    env:
-      RABBITMQ_PORT: 5673
 
     services:
       mysql:
@@ -24,11 +22,7 @@ jobs:
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-      rabbitmq:
-        image: rabbitmq:3.8
-        ports:
-          - 5672:5672
-        options: --health-cmd="rabbitmqctl node_health_check" --health-interval=10s --health-timeout=5s --health-retries=3
+
       redis:
         image: redis:6.2
         ports:
@@ -44,6 +38,15 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
+      - name: Set up RabbitMQ
+        uses: getong/rabbitmq-action@v1.2
+        with:
+          rabbitmq version: '3.8.2-management-alpine'
+          host port: 5672
+          rabbitmq user: 'guest'
+          rabbitmq password: 'guest'
+          rabbitmq vhost: '/'
 
       - name: Cache Maven packages
         uses: actions/cache@v2
