enable RabbitMQ plugins

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,30 @@ jobs:
           rabbitmq password: 'guest'
           rabbitmq vhost: '/'
 
+      - name: Enable RabbitMQ Management Plugin
+        run: |
+          docker exec rabbitmq rabbitmq-plugins enable rabbitmq_management
+
+      - name: Enable RabbitMQ Web STOMP Plugin
+        run: |
+          docker exec rabbitmq rabbitmq-plugins enable rabbitmq_web_stomp
+
+      - name: Enable RabbitMQ Web MQTT Plugin
+        run: |
+          docker exec rabbitmq rabbitmq-plugins enable rabbitmq_web_mqtt
+
+      - name: Enable RabbitMQ MQTT Plugin
+        run: |
+          docker exec rabbitmq rabbitmq-plugins enable rabbitmq_mqtt
+
+      - name: Enable RabbitMQ STOMP Plugin
+        run: |
+          docker exec rabbitmq rabbitmq-plugins enable rabbitmq_stomp
+
+      - name: Enable RabbitMQ Delayed Message Plugin
+        run: |
+          docker exec rabbitmq rabbitmq-plugins enable rabbitmq_delayed_message_exchange
+
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
