--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           rabbitmq vhost: '/'
 
       - name: Set up Redis
-        uses: redis-actions/setup-redis@v1.0.0
+        uses: supercharge/redis-github-action@1.0.0
         with:
           redis-version: '6.2'
           redis-port: 6379
