--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,16 @@ jobs:
       matrix:
         mongodb-version: ['6.0']
 
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: admin
+          MYSQL_DATABASE: ecommerce
+        ports:
+          - 3306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - uses: actions/checkout@v3
 
@@ -37,11 +47,6 @@ jobs:
         with:
           redis-version: '6.2'
           redis-port: 6379
-
-      - name: Set up MySQL
-        run: |
-          sudo apt-get install -y mysql-client
-          mysql -h 127.0.0.1 -u root -padmin -e "CREATE DATABASE ecommerce;"
 
       - name: Start MySQL
         run: |
