--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,12 @@ jobs:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
+      redis:
+        image: redis:6.2
+        ports:
+          - 6379:6379
+        options: --health-cmd="redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
       - uses: actions/checkout@v3
 
@@ -41,12 +47,6 @@ jobs:
           rabbitmq user: 'guest'
           rabbitmq password: 'guest'
           rabbitmq vhost: '/'
-
-      - name: Set up Redis
-        uses: supercharge/redis-github-action@1.0.0
-        with:
-          redis-version: '6.2'
-          redis-port: 6379
 
       - name: Start MySQL
         run: |
