--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Set up RabbitMQ
-        uses: supercharge/rabbitmq-github-action@1.0.0
+        uses: namoshek/rabbitmq-github-action@v1
         with:
           rabbitmq-version: 3.8.2
           rabbitmq-username: guest
