--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
         container_name: app-db
         image: mysql:8.0
         environment:
-            MARIADB_ROOT_PASSWORD: admin
-            MARIADB_DATABASE: ecommerce
+            MYSQL_ROOT_PASSWORD: admin
+            MYSQL_DATABASE: ecommerce
         restart: always
         ports:
             - "3307:3306"
