--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,13 @@
 			<artifactId>annotations</artifactId>
 			<version>24.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>2.2.224</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
